--- a/appunti/appunti-luca-borghi/appunti-bogo8liuk.tex
+++ b/appunti/appunti-luca-borghi/appunti-bogo8liuk.tex
@@ -18,7 +18,68 @@
 \begin{document}
 
 \begin{titlepage}
+
+\begin{center}
+
+\rule[0.5cm]{12.1cm}{0.6mm}
+{\small {\bf Corso di Laurea magistrale in Informatica }}
+
+\end{center}
+
+\vspace{15mm}
+\begin{center}
+
+{\LARGE
+    {\bf APPUNTI DI DECISION MAKING}
+}\\
+\vspace{3mm}
+{\LARGE
+    {\bf WITH CONSTRAINT}
+}\\
+\vspace{3mm}
+{\LARGE
+    {\bf PROGRAMMING}
+}\\
+
+\end{center}
+
+\vspace{40mm}
+\par
+\noindent
+\begin{minipage}[t]{0.47\textwidth}
+
+{\large
+    {\bf Autore:\\
+        Luca Borghi
+    }
+}
+
+\end{minipage}
+
+\vspace{20mm}
 \end{titlepage}
+
+\section*{Condizioni d'uso}
+Questi appunti non godono delle proprietà di correttezza e di completezza. Ciò
+significa che non vi è alcuna garanzia sulla conoscenza qui sopra riportata e
+che l'autore NON sarà tenuto a rispondere di eventuali danni o eventi negativi
+causati direttamente o indirettamente dall'uso o esistenza di questi appunti.
+Con questi appunti non si intende sostituire il materiale didattico a
+disposizione degli studenti, i quali sono caldamente invitati a utilizzare anche
+altre fonti e a verificare sempre la veridicità di ciò che è riportato qui.
+Chiunque è libero di usufruire di questi appunti, di modificarli e di
+redistribuirli mantenendo la licenza attuale intatta. Il redistributore non può
+apportare alcuna modifica alla licenza attuale. È vietato asserire da parte del
+redistributore che questi appunti non sono opera dell'autore originale e/o che
+sono il frutto del solo lavoro del redistributore ed è, inoltre, vietato
+omettere il nome dell'autore originale o applicarci qualsivoglia modifica. Un
+utente ha l'obbligo di chiedere all'autore originale di questa risorsa il
+permesso per qualsiasi azione che riguarda quest'opera che non sia già
+esplicitamente regolata da tale licenza. Il redistributore ha l'obbligo di
+indicare esplicitamente che la sua copia non è quella originale e che ha
+effettuato cambiamenti (se ne ha effettuati).
+
+\newpage
 
 \tableofcontents
 \newpage
