--- a/appunti/appunti-luca-borghi/appunti-bogo8liuk.tex
+++ b/appunti/appunti-luca-borghi/appunti-bogo8liuk.tex
@@ -79,6 +79,9 @@ esplicitamente regolata da tale licenza. Il redistributore ha l'obbligo di
 indicare esplicitamente che la sua copia non è quella originale e che ha
 effettuato cambiamenti (se ne ha effettuati).
 
+\section*{Contatti}
+Email: \texttt{lucaborghi99@gmail.com}, Telegram: \texttt{@bogo8liuk}
+
 \newpage
 
 \tableofcontents
